--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -48,12 +48,12 @@
 2020-09-10 <a href="#66bd3309b3"><strong>公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform</strong></a><br />
 2020-09-10 <a href="#35125b0dbe"><strike>公立はこだて未来大</strike></a><br />
 2020-09-10 <a href="#6238f6a583"><strike>広島工業大学・コンピュータシステム</strike></a><br />
-2020-09-10 <a href="#973b1ff69b">広島工業大学・情報ネットワーク</a><br />
+2020-09-10 <a href="#eb8e5a0a84"><strike>広島工業大学・情報ネットワーク(did.not.make.it)</strike></a><br />
 2020-09-11 <a href="#439bd40748"><strike>明治大学・統計科学・統計数学・知能情報科学</strike></a><br />
-2020-09-11 <a href="#1cb0d08d32"><strong>法政大学.情報科学部コンピュータ科学科✌freeform✌jrecin</strong></a><br />
+2020-09-11 <a href="#2b70b01167"><strong>★金沢大学.IoT及び情報通信分野</strong></a><br />
 2020-09-11 <a href="#08ce89f323"><strike>北海道.情報科学研究院</strike></a><br />
-2020-09-11 <a href="#9d343defd9">金沢大学.IoT及び情報通信分野</a><br />
-2020-09-14 <a href="#478f7a5a07">★東京理科大工学部情報工学科インテリジェントシステム分野</a><br />
+2020-09-11 <a href="#1cb0d08d32"><strong>法政大学.情報科学部コンピュータ科学科✌freeform✌jrecin</strong></a><br />
+2020-09-14 <a href="#dc97c1915a"><strong>★東京理科大工学部情報工学科インテリジェントシステム分野</strong></a><br />
 2020-09-14 <a href="#3e98d45b55"><strike>国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation</strike></a><br />
 2020-09-14 <a href="#391814b22c"><strike>琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション✘女性限定</strike></a><br />
 2020-09-15 <a href="#bc9b288934"><strong>青山学院大.情報社会科学✌freeform</strong></a><br />
@@ -144,45 +144,12 @@
 <h2 id="公立はこだて未来大.情報デザイン.複雑系知能分野freeform-2020-09-10-top"><strong>公立はこだて未来大.情報デザイン.複雑系知能分野✌freeform</strong> (2020-09-10) <span id="66bd3309b3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="公立はこだて未来大-2020-09-10-top"><strike>公立はこだて未来大</strike> (2020-09-10) <span id="35125b0dbe"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="広島工業大学コンピュータシステム-2020-09-10-top"><strike>広島工業大学・コンピュータシステム</strike> (2020-09-10) <span id="6238f6a583"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="広島工業大学情報ネットワーク-2020-09-10-top">広島工業大学・情報ネットワーク (2020-09-10) <span id="973b1ff69b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 17<br />
-id : D120080389 [NEW]<br />
-update : 2020年08月08日<br />
-univ : 広島工業大学・情報ネットワーク<br />
-title : 教授、准教授、講師又は助教の公募（情報ネットワーク）<br />
-field : 情報学 - 全て<br />
-post : 教授相当 准教授・常勤専任講師相当 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月10日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080389&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080389&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="広島工業大学情報ネットワークdid.not.make.it-2020-09-10-top"><strike>広島工業大学・情報ネットワーク(did.not.make.it)</strike> (2020-09-10) <span id="eb8e5a0a84"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="金沢大学.iot及び情報通信分野-2020-09-11-top"><strong>★金沢大学.IoT及び情報通信分野</strong> (2020-09-11) <span id="2b70b01167"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="法政大学.情報科学部コンピュータ科学科freeformjrecin-2020-09-11-top"><strong>法政大学.情報科学部コンピュータ科学科✌freeform✌jrecin</strong> (2020-09-11) <span id="1cb0d08d32"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="金沢大学.iot及び情報通信分野-2020-09-11-top">金沢大学.IoT及び情報通信分野 (2020-09-11) <span id="9d343defd9"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 7<br />
-id : D120070946 [UPDATE]<br />
-update : 2020年07月15日<br />
-univ : 金沢大学<br />
-title : 教授または准教授の公募（IoT及び情報通信分野）<br />
-field : 情報学 - 計算基盤 工学 - 電気電子工学<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月11日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070946&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070946&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="北海道.情報科学研究院-2020-09-11-top"><strike>北海道.情報科学研究院</strike> (2020-09-11) <span id="08ce89f323"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="明治大学統計科学統計数学知能情報科学-2020-09-11-top"><strike>明治大学・統計科学・統計数学・知能情報科学</strike> (2020-09-11) <span id="439bd40748"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="東京理科大工学部情報工学科インテリジェントシステム分野-2020-09-14-top">★東京理科大工学部情報工学科インテリジェントシステム分野 (2020-09-14) <span id="478f7a5a07"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 42<br />
-id : D120061155 [NEW]<br />
-update : 2020年06月23日<br />
-univ : 東京理科大学<br />
-title : 東京理科大学工学部情報工学科インテリジェントシステム分野（人工知能，機械学習，自然言語処理，情報検索及びその関連分野）<br />
-field : 工学 - 情報工学 工学 - 人工知能 工学 - 音声音響処理<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月14日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061155&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061155&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="東京理科大工学部情報工学科インテリジェントシステム分野-2020-09-14-top"><strong>★東京理科大工学部情報工学科インテリジェントシステム分野</strong> (2020-09-14) <span id="dc97c1915a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センターprobation-2020-09-14-top"><strike>国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター✘probation</strike> (2020-09-14) <span id="3e98d45b55"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="琉球大学.知能情報コース-知能情報講座知能情報学-ヒューマンコンピュータインタラクション女性限定-2020-09-14-top"><strike>琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション✘女性限定</strike> (2020-09-14) <span id="391814b22c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="青山学院大.情報社会科学freeform-2020-09-15-top"><strong>青山学院大.情報社会科学✌freeform</strong> (2020-09-15) <span id="bc9b288934"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
