--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -69,20 +69,20 @@
 2020-09-25 <a href="#f89d94d8d4"><strike>▲日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野☢福島</strike></a><br />
 2020-09-25 <a href="#6a2cb633b3"><strike>★東京理科大.数理モデリング、知能数理分野</strike></a><br />
 2020-09-25 <a href="#a899e6ba64"><strong>▲成蹊大学.総合理工-計算科学-数物系科学</strong></a><br />
-2020-09-28 <a href="#72f54b1e8b">岡山大学・知能機械システム学講座</a><br />
+2020-09-28 <a href="#2277a8f108"><strike>岡山大学・知能機械システム学講座</strike></a><br />
 2020-09-30 <a href="#bad52fddb6"><strike>熊本大学・ビッグデータ</strike></a><br />
-2020-09-30 <a href="#05b27be63a">名城大学・情報学、統計学、フィールド調査</a><br />
+2020-09-30 <a href="#8259a50aec"><strike>名城大学・情報学、統計学、フィールド調査</strike></a><br />
 2020-09-30 <a href="#1444194ab3"><strike>北海道大学.数理科学・応用数学分野</strike></a><br />
 2020-09-30 <a href="#c322643ba2">兵庫県立大学.情報学-情報通信-ネットワーク</a><br />
 2020-09-30 <a href="#1ac3083abc"><strike>兵庫県立大学.AI・IoT・ビックデータ</strike></a><br />
 2020-09-30 <a href="#c1c2b5544e">福岡大.情報学</a><br />
-2020-09-30 <a href="#b869c3b6a9">兵庫県立大学・情報通信工学</a><br />
+2020-09-30 <a href="#bf3d9f6641"><strike>兵庫県立大学・情報通信工学</strike></a><br />
 2020-09-30 <a href="#83e6037ba4"><strike>株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】</strike></a><br />
-2020-09-30 <a href="#4ace86e4d6">★龍谷大学・情報科学分野</a><br />
-2020-09-30 <a href="#ff4e2d8426">▲東京都市大学・情報理論</a><br />
 2020-09-30 <a href="#9db5d8058d">▲静岡理工科大学.電子情報分野</a><br />
 2020-09-30 <a href="#ade6a37b46"><strike>▲成蹊大.計算科学(1of2)</strike></a><br />
-2020-09-30 <a href="#157979e8ee">‼★公立はこだて未来大学・情報システム</a><br />
+2020-09-30 <a href="#46260b9624"><strong>★龍谷大学・情報科学分野</strong></a><br />
+2020-09-30 <a href="#417a88b524"><strong>▲東京都市大学・情報理論</strong></a><br />
+2020-09-30 <a href="#00024ca602"><strong>‼★公立はこだて未来大学・情報システム</strong></a><br />
 2020-09-30 <a href="#829301a770"><strike>岡山大学・電気電子機能開発・powerelec</strike></a><br />
 2020-10-02 <a href="#222bdcbcbe">明星大.データアナリティクス</a><br />
 2020-10-09 <a href="#bd5caa898a">立命館大学.システム制御工学.無線通信・電波</a><br />
@@ -175,30 +175,10 @@
 <h2 id="東京理科大.数理モデリング知能数理分野-2020-09-25-top"><strike>★東京理科大.数理モデリング、知能数理分野</strike> (2020-09-25) <span id="6a2cb633b3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="岩手県立大.人工知能コース-2020-09-25-top"><strike>岩手県立大.人工知能コース</strike> (2020-09-25) <span id="8b54bc80b6"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京大学.高性能計算地球科学分野-2020-09-25-top"><strike>東京大学.高性能計算地球科学分野</strike> (2020-09-25) <span id="8ab7884d11"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="岡山大学知能機械システム学講座-2020-09-28-top">岡山大学・知能機械システム学講座 (2020-09-28) <span id="72f54b1e8b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 7<br />
-id : D120010066 [UPDATE]<br />
-update : 2020年09月04日<br />
-univ : 岡山大学・知能機械システム学講座<br />
-title : 【期間延長】大学院自然科学研究科 産業創成工学専攻 知能機械システム学講座 教授の募集<br />
-field : その他 - 知能機械学・機械システム ロボティクス その他 - 知能機械学・機械システム メカトロニクス その他 - 知能ロボティクス　知能ロボット<br />
-post : 教授相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月28日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120010066&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120010066&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="公立はこだて未来大学情報システム-2020-09-30-top">‼★公立はこだて未来大学・情報システム (2020-09-30) <span id="157979e8ee"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 11<br />
-id : D120080202 [NEW]<br />
-update : 2020年08月08日<br />
-univ : 公立はこだて未来大学・情報システム<br />
-title : 公立はこだて未来大学教員募集(教授または准教授，専門分野 情報システム）<br />
-field : 情報学 - 全て 工学 - 機械工学<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080202&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080202&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="岡山大学知能機械システム学講座-2020-09-28-top"><strike>岡山大学・知能機械システム学講座</strike> (2020-09-28) <span id="2277a8f108"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="公立はこだて未来大学情報システム-2020-09-30-top"><strong>‼★公立はこだて未来大学・情報システム</strong> (2020-09-30) <span id="00024ca602"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="東京都市大学情報理論-2020-09-30-top"><strong>▲東京都市大学・情報理論</strong> (2020-09-30) <span id="417a88b524"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="龍谷大学情報科学分野-2020-09-30-top"><strong>★龍谷大学・情報科学分野</strong> (2020-09-30) <span id="46260b9624"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="成蹊大.計算科学1of2-2020-09-30-top"><strike>▲成蹊大.計算科学(1of2)</strike> (2020-09-30) <span id="ade6a37b46"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="静岡理工科大学.電子情報分野-2020-09-30-top">▲静岡理工科大学.電子情報分野 (2020-09-30) <span id="9db5d8058d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 53<br />
@@ -211,30 +191,6 @@ post : 教授相当 准教授・常勤専任講師相当<br />
 tenure : 常勤 (任期なし)<br />
 deadline : 2020年09月30日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070723&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070723&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="東京都市大学情報理論-2020-09-30-top">▲東京都市大学・情報理論 (2020-09-30) <span id="ff4e2d8426"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 3<br />
-id : D120070673 [UPDATE]<br />
-update : 2020年08月06日<br />
-univ : 東京都市大学・情報理論<br />
-title : 情報科学科・准教授の公募（情報数理（情報理論）分野）<br />
-field : 情報学 - 情報学基礎<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070673&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070673&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="龍谷大学情報科学分野-2020-09-30-top">★龍谷大学・情報科学分野 (2020-09-30) <span id="4ace86e4d6"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 11<br />
-id : D120071665 [NEW]<br />
-update : 2020年07月29日<br />
-univ : 龍谷大学・情報科学分野<br />
-title : 教授または准教授の公募（情報科学分野）<br />
-field : 情報学 - 全て 工学 - 電気電子工学<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071665&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071665&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="岡山大学電気電子機能開発powerelec-2020-09-30-top"><strike>岡山大学・電気電子機能開発・powerelec</strike> (2020-09-30) <span id="829301a770"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="株式会社メトロ.計算科学エンジニアスーパーコンピュータ向けアプリケーション-2020-09-30-top"><strike>株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】</strike> (2020-09-30) <span id="83e6037ba4"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
@@ -264,31 +220,9 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年09月30日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070808&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070808&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="兵庫県立大学情報通信工学-2020-09-30-top">兵庫県立大学・情報通信工学 (2020-09-30) <span id="b869c3b6a9"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 3<br />
-id : D120070808 [UPDATE]<br />
-update : 2020年09月11日<br />
-univ : 兵庫県立大学・情報通信工学<br />
-title : 准教授の公募（電子情報工学専攻 情報通信工学）<br />
-field : 工学 - 電気電子工学 情報学 - 情報通信，ネットワークとその応用<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070808&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070808&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="兵庫県立大学情報通信工学-2020-09-30-top"><strike>兵庫県立大学・情報通信工学</strike> (2020-09-30) <span id="bf3d9f6641"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="北海道大学.数理科学応用数学分野-2020-09-30-top"><strike>北海道大学.数理科学・応用数学分野</strike> (2020-09-30) <span id="1444194ab3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="名城大学情報学統計学フィールド調査-2020-09-30-top">名城大学・情報学、統計学、フィールド調査 (2020-09-30) <span id="05b27be63a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 32<br />
-id : D120080207 [NEW]<br />
-update : 2020年08月07日<br />
-univ : 名城大学・情報学、統計学、フィールド調査<br />
-title : 名城大学　都市情報学部 都市情報学科（情報学、統計学、フィールド調査）　助教の公募<br />
-field : 情報学 - 情報学基礎 情報学 - 人間情報学 情報学 - 情報学フロンティア<br />
-post : 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月01日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080207&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120080207&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="名城大学情報学統計学フィールド調査-2020-09-30-top"><strike>名城大学・情報学、統計学、フィールド調査</strike> (2020-09-30) <span id="8259a50aec"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="明星大.データアナリティクス-2020-10-02-top">明星大.データアナリティクス (2020-10-02) <span id="222bdcbcbe"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>No. ：39<br />
 データ番号 ：D120061419 [NEW]<br />
