--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -70,21 +70,21 @@
 2020-09-25 <a href="#6a2cb633b3"><strike>★東京理科大.数理モデリング、知能数理分野</strike></a><br />
 2020-09-25 <a href="#a899e6ba64"><strong>▲成蹊大学.総合理工-計算科学-数物系科学</strong></a><br />
 2020-09-28 <a href="#2277a8f108"><strike>岡山大学・知能機械システム学講座</strike></a><br />
-2020-09-30 <a href="#bad52fddb6"><strike>熊本大学・ビッグデータ</strike></a><br />
+2020-09-30 <a href="#83e6037ba4"><strike>株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】</strike></a><br />
 2020-09-30 <a href="#8259a50aec"><strike>名城大学・情報学、統計学、フィールド調査</strike></a><br />
 2020-09-30 <a href="#1444194ab3"><strike>北海道大学.数理科学・応用数学分野</strike></a><br />
 2020-09-30 <a href="#c322643ba2">兵庫県立大学.情報学-情報通信-ネットワーク</a><br />
 2020-09-30 <a href="#1ac3083abc"><strike>兵庫県立大学.AI・IoT・ビックデータ</strike></a><br />
-2020-09-30 <a href="#c1c2b5544e">福岡大.情報学</a><br />
+2020-09-30 <a href="#bad52fddb6"><strike>熊本大学・ビッグデータ</strike></a><br />
 2020-09-30 <a href="#bf3d9f6641"><strike>兵庫県立大学・情報通信工学</strike></a><br />
-2020-09-30 <a href="#83e6037ba4"><strike>株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】</strike></a><br />
-2020-09-30 <a href="#9db5d8058d">▲静岡理工科大学.電子情報分野</a><br />
+2020-09-30 <a href="#829301a770"><strike>岡山大学・電気電子機能開発・powerelec</strike></a><br />
 2020-09-30 <a href="#ade6a37b46"><strike>▲成蹊大.計算科学(1of2)</strike></a><br />
+2020-09-30 <a href="#384da3400c"><strong>福岡大.情報学</strong></a><br />
 2020-09-30 <a href="#46260b9624"><strong>★龍谷大学・情報科学分野</strong></a><br />
 2020-09-30 <a href="#417a88b524"><strong>▲東京都市大学・情報理論</strong></a><br />
 2020-09-30 <a href="#00024ca602"><strong>‼★公立はこだて未来大学・情報システム</strong></a><br />
-2020-09-30 <a href="#829301a770"><strike>岡山大学・電気電子機能開発・powerelec</strike></a><br />
-2020-10-02 <a href="#222bdcbcbe">明星大.データアナリティクス</a><br />
+2020-09-30 <a href="#a31425d7c9"><strike>▲静岡理工科大学.電子情報分野(smalluni)</strike></a><br />
+2020-10-02 <a href="#20472a9b61"><strike>明星大.データアナリティクス✘推薦書</strike></a><br />
 2020-10-09 <a href="#bd5caa898a">立命館大学.システム制御工学.無線通信・電波</a><br />
 2020-10-12 <a href="#1e1dc54b48"><strike>東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど</strike></a><br />
 2020-10-16 <a href="#02c4b28b38">千葉経済大学・情報学分野</a><br />
@@ -179,34 +179,12 @@
 <h2 id="公立はこだて未来大学情報システム-2020-09-30-top"><strong>‼★公立はこだて未来大学・情報システム</strong> (2020-09-30) <span id="00024ca602"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京都市大学情報理論-2020-09-30-top"><strong>▲東京都市大学・情報理論</strong> (2020-09-30) <span id="417a88b524"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="龍谷大学情報科学分野-2020-09-30-top"><strong>★龍谷大学・情報科学分野</strong> (2020-09-30) <span id="46260b9624"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="福岡大.情報学-2020-09-30-top"><strong>福岡大.情報学</strong> (2020-09-30) <span id="384da3400c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="成蹊大.計算科学1of2-2020-09-30-top"><strike>▲成蹊大.計算科学(1of2)</strike> (2020-09-30) <span id="ade6a37b46"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="静岡理工科大学.電子情報分野-2020-09-30-top">▲静岡理工科大学.電子情報分野 (2020-09-30) <span id="9db5d8058d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 53<br />
-id : D120070723 [NEW]<br />
-update : 2020年07月14日<br />
-univ : 静岡理工科大学<br />
-title : 教授、准教授、または講師の公募（電子情報分野）<br />
-field : 工学 - 電気電子工学<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070723&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070723&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="静岡理工科大学.電子情報分野smalluni-2020-09-30-top"><strike>▲静岡理工科大学.電子情報分野(smalluni)</strike> (2020-09-30) <span id="a31425d7c9"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="岡山大学電気電子機能開発powerelec-2020-09-30-top"><strike>岡山大学・電気電子機能開発・powerelec</strike> (2020-09-30) <span id="829301a770"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="株式会社メトロ.計算科学エンジニアスーパーコンピュータ向けアプリケーション-2020-09-30-top"><strike>株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】</strike> (2020-09-30) <span id="83e6037ba4"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="熊本大学ビッグデータ-2020-09-30-top"><strike>熊本大学・ビッグデータ</strike> (2020-09-30) <span id="bad52fddb6"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="福岡大.情報学-2020-09-30-top">福岡大.情報学 (2020-09-30) <span id="c1c2b5544e"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 28<br />
-id : D120060663 [NEW]<br />
-update : 2020年06月13日<br />
-univ : 福岡大学<br />
-title : 福岡大学工学部電子情報工学科教授または准教授の公募<br />
-field : 情報学 - 全て 工学 - 電気電子工学<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年09月30日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060663&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060663&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="兵庫県立大学.aiiotビックデータ-2020-09-30-top"><strike>兵庫県立大学.AI・IoT・ビックデータ</strike> (2020-09-30) <span id="1ac3083abc"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="兵庫県立大学.情報学-情報通信-ネットワーク-2020-09-30-top">兵庫県立大学.情報学-情報通信-ネットワーク (2020-09-30) <span id="c322643ba2"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 63<br />
@@ -223,20 +201,7 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12007080
 <h2 id="兵庫県立大学情報通信工学-2020-09-30-top"><strike>兵庫県立大学・情報通信工学</strike> (2020-09-30) <span id="bf3d9f6641"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="北海道大学.数理科学応用数学分野-2020-09-30-top"><strike>北海道大学.数理科学・応用数学分野</strike> (2020-09-30) <span id="1444194ab3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="名城大学情報学統計学フィールド調査-2020-09-30-top"><strike>名城大学・情報学、統計学、フィールド調査</strike> (2020-09-30) <span id="8259a50aec"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="明星大.データアナリティクス-2020-10-02-top">明星大.データアナリティクス (2020-10-02) <span id="222bdcbcbe"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>No. ：39<br />
-データ番号 ：D120061419 [NEW]<br />
-更新日 ：2020年06月26日<br />
-機関名 ：明星大学<br />
-タイトル ：教授、准教授または助教の公募 [データサイエンス（データアナリティクス）関連]<br />
-研究分野 ：情報学 - 全て<br />
-職種 ： 教授相当<br />
-准教授・常勤専任講師相当<br />
-助教相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年10月02日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061419&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061419&amp;ln_jor=0&amp;top_btn=1</a><br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="明星大.データアナリティクス推薦書-2020-10-02-top"><strike>明星大.データアナリティクス✘推薦書</strike> (2020-10-02) <span id="20472a9b61"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="立命館大学.システム制御工学.無線通信電波-2020-10-09-top">立命館大学.システム制御工学.無線通信・電波 (2020-10-09) <span id="bd5caa898a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>No. ：23<br />
 データ番号 ：D120070444 [UPDATE]<br />
