--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -85,13 +85,13 @@
 2020-09-30 <a href="#00024ca602"><strong>‼★公立はこだて未来大学・情報システム</strong></a><br />
 2020-09-30 <a href="#a31425d7c9"><strike>▲静岡理工科大学.電子情報分野(smalluni)</strike></a><br />
 2020-10-02 <a href="#20472a9b61"><strike>明星大.データアナリティクス✘推薦書</strike></a><br />
-2020-10-09 <a href="#bd5caa898a">立命館大学.システム制御工学.無線通信・電波</a><br />
+2020-10-09 <a href="#bc2e00886c"><strike>立命館大学.システム制御工学.無線通信・電波</strike></a><br />
 2020-10-12 <a href="#1e1dc54b48"><strike>東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど</strike></a><br />
 2020-10-16 <a href="#02c4b28b38">千葉経済大学・情報学分野</a><br />
 2020-10-16 <a href="#84b6c0901c">大阪大学大学院・情報科学研究科</a><br />
 2020-10-16 <a href="#0ece770448">東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究</a><br />
 2020-10-16 <a href="#1d2e883457"><strike>愛知工科大学・組込み系システム</strike></a><br />
-2020-10-16 <a href="#d25f1244df">FIT.制御・計測に関連する分野</a><br />
+2020-10-16 <a href="#9690b3ed53"><strike>FIT.制御・計測に関連する分野</strike></a><br />
 2020-10-16 <a href="#a4664346da">愛知工科大学・データサイエンスまたはＡＩ</a><br />
 2020-10-23 <a href="#bc36a4fbc6">東京工業大学・情報通信における応用AI分野</a><br />
 2020-10-30 <a href="#53f715a6b7">足利大学・人工知能</a><br />
@@ -99,8 +99,8 @@
 2020-10-30 <a href="#3223295a3c">足利大学・情報工学、情報科学センター</a><br />
 2020-10-30 <a href="#4da6d3f950">高知大学・情報工学</a><br />
 2020-10-30 <a href="#ce5645d8a9">香川大学・機械システム</a><br />
-2020-11-04 <a href="#384317449e">IoT・AIロボティクス・メカトロニクス・知能機械</a><br />
 2020-11-04 <a href="#5891e45cc5">お茶の水女子大学・人間工学（ロボット工学、生体工学）</a><br />
+2020-11-04 <a href="#f455ef9cd4">久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械</a><br />
 2020-11-05 <a href="#0d6435b414">名古屋市立大学・情報環境デザイン領域</a><br />
 2020-11-10 <a href="#56ddb64634">情報システム工学科</a><br />
 2020-11-13 <a href="#d00a473fdd">香川大学・情報システム・セキュリティコース</a><br />
@@ -202,45 +202,9 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12007080
 <h2 id="北海道大学.数理科学応用数学分野-2020-09-30-top"><strike>北海道大学.数理科学・応用数学分野</strike> (2020-09-30) <span id="1444194ab3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="名城大学情報学統計学フィールド調査-2020-09-30-top"><strike>名城大学・情報学、統計学、フィールド調査</strike> (2020-09-30) <span id="8259a50aec"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="明星大.データアナリティクス推薦書-2020-10-02-top"><strike>明星大.データアナリティクス✘推薦書</strike> (2020-10-02) <span id="20472a9b61"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="立命館大学.システム制御工学.無線通信電波-2020-10-09-top">立命館大学.システム制御工学.無線通信・電波 (2020-10-09) <span id="bd5caa898a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>No. ：23<br />
-データ番号 ：D120070444 [UPDATE]<br />
-更新日 ：2020年07月09日<br />
-機関名 ：立命館大学.システム制御工学<br />
-タイトル ：立命館大学 理工学部電気電子工学科 教員公募（システム制御工学とその関連分野）<br />
-研究分野 ：工学 - 全て<br />
-総合理工 - 全て<br />
-情報学 - 全て<br />
-職種 ： 准教授・常勤専任講師相当<br />
-教授相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年10月09日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070444&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070444&amp;ln_jor=0&amp;top_btn=1</a></p>
-<p>No. ：25<br />
-データ番号 ：D120070446 [UPDATE]<br />
-更新日 ：2020年07月09日<br />
-機関名 ：立命館大学<br />
-タイトル ：立命館大学　理工学部電気電子工学科　准教授または教授の公募（無線通信・電波工学分野）<br />
-研究分野 ：工学 - 電気電子工学<br />
-職種 ： 准教授・常勤専任講師相当<br />
-教授相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年10月09日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070446&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070446&amp;ln_jor=0&amp;top_btn=1</a><br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="立命館大学.システム制御工学.無線通信電波-2020-10-09-top"><strike>立命館大学.システム制御工学.無線通信・電波</strike> (2020-10-09) <span id="bc2e00886c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど-2020-10-12-top"><strike>東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど</strike> (2020-10-12) <span id="1e1dc54b48"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="fit.制御計測に関連する分野-2020-10-16-top">FIT.制御・計測に関連する分野 (2020-10-16) <span id="d25f1244df"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 10<br />
-id : D120060831 [NEW]<br />
-update : 2020年06月19日<br />
-univ : 福岡工業大学<br />
-title : 福岡工業大学　教員公募（制御・計測に関連する分野）<br />
-field : 工学 - 計測工学[Measurement engineering] 工学 - 制御・システム工学[Control engineering/ System engineering]<br />
-post : 准教授・常勤専任講師相当 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月16日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060831&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060831&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="fit.制御計測に関連する分野-2020-10-16-top"><strike>FIT.制御・計測に関連する分野</strike> (2020-10-16) <span id="9690b3ed53"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="愛知工科大学データサイエンスまたはａｉ-2020-10-16-top">愛知工科大学・データサイエンスまたはＡＩ (2020-10-16) <span id="a4664346da"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 22<br />
 id : D120081431 [NEW]<br />
@@ -380,18 +344,6 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12008002
 募集終了日 ：2020年10月30日<br />
 ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050911&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050911&amp;ln_jor=0&amp;top_btn=1</a><br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="iotaiロボティクスメカトロニクス知能機械-2020-11-04-top">IoT・AIロボティクス・メカトロニクス・知能機械 (2020-11-04) <span id="384317449e"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 40<br />
-id : D120090870 [NEW]<br />
-update : 2020年09月16日<br />
-univ : 久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械<br />
-title : 教授，准教授もしくは講師の公募（IoT・AIロボティクス・メカトロニクス・知能機械）分野<br />
-field : 工学 - 機械工学<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年11月04日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090870&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090870&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="お茶の水女子大学人間工学ロボット工学生体工学-2020-11-04-top">お茶の水女子大学・人間工学（ロボット工学、生体工学） (2020-11-04) <span id="5891e45cc5"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 36<br />
 id : D120091137 [UPDATE]<br />
@@ -403,6 +355,18 @@ post : 教授相当 准教授・常勤専任講師相当<br />
 tenure : 常勤 (任期なし)<br />
 deadline : 2020年11月04日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091137&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120091137&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
+<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="久留米工業大学iotaiロボティクスメカトロニクス知能機械-2020-11-04-top">久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械 (2020-11-04) <span id="f455ef9cd4"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<p>no : 40<br />
+id : D120090870 [NEW]<br />
+update : 2020年09月16日<br />
+univ : 久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械<br />
+title : 教授，准教授もしくは講師の公募（IoT・AIロボティクス・メカトロニクス・知能機械）分野<br />
+field : 工学 - 機械工学<br />
+post : 教授相当 准教授・常勤専任講師相当<br />
+tenure : 常勤 (任期なし)<br />
+deadline : 2020年11月04日<br />
+url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090870&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090870&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="名古屋市立大学情報環境デザイン領域-2020-11-05-top">名古屋市立大学・情報環境デザイン領域 (2020-11-05) <span id="0d6435b414"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 40<br />
