--- a/gcal/deadlines.html
+++ b/gcal/deadlines.html
@@ -1,23 +1,21 @@
 <h1 id="deadlines">deadlines <span id="top"></span></h1>
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <p>this file is generated automatically, do not make manual changes to it!</p>
-<p>2020-10-04 <a href="#44c7738649">IEEE.CogMI</a><br />
-2020-10-05 <a href="#aedf9af28a">EAI</a><br />
-2020-10-05 <a href="#7322197f11">BigDataJ.softcompute</a><br />
+<p>2020-10-05 <a href="#aedf9af28a">EAI</a><br />
 2020-10-08 <a href="#f09b5c59f1">ICIN.clouds.paris(online)</a><br />
 2020-10-10 <a href="#f69158bf71">conf.IEEE.MSN(tokyo).mobility.sensing.networking</a><br />
 2020-10-12 <a href="#fa627027c4">IEEE.ICC.netgennets</a><br />
 2020-10-12 <a href="#fb987fc005">IEEE.ICC.SQRM.qosqoemodeling</a><br />
+2020-10-15 <a href="#e0fba176cc">(J)Sensors.cooperativePerceptionVehicles</a><br />
+2020-10-15 <a href="#5332202232">EAI.vnets(springerlink)</a><br />
 2020-10-15 <a href="#b12c8b0747">journal.TNSM.cybersecurity.sec.manage.nets.services</a><br />
 2020-10-15 <a href="#e32e670766">SoCPaR(springer)(online)</a><br />
-2020-10-15 <a href="#5332202232">EAI.vnets(springerlink)</a><br />
-2020-10-15 <a href="#e0fba176cc">(J)Sensors.cooperativePerceptionVehicles</a><br />
 2020-10-16 <a href="#50893b61fd">IEEE.CCNC.RoboCom.swarms</a><br />
 2020-10-19 <a href="#2528534e69">EAI.MTYMEX.SmartTech(springer)</a><br />
 2020-10-23 <a href="#f2a62109ee">PAM</a><br />
 2020-10-28 <a href="#9757aa395e">DASFAA.databases(springer)</a><br />
 2020-10-30 <a href="#7533527f5d">(J)ACMTrans.ContactTracing</a><br />
-2020-10-30 <a href="#a996c6e76f">âEAI.Covid19.and.cloud(+J)</a><br />
+2020-10-30 <a href="#197c84667a">★EAI.Covid19.and.cloud(+J)</a><br />
 2020-10-31 <a href="#bba3c3e514">journal.Biosensors(JCR).machine.learning</a><br />
 2020-10-31 <a href="#e050f91cf8">springerj・cybersecAI</a><br />
 2020-10-31 <a href="#f6d0db1ffc">WileyJ.software.innovations</a><br />
@@ -32,8 +30,8 @@
 2020-12-01 <a href="#e3e175936d">IETj.smartcities</a><br />
 2020-12-10 <a href="#56e2617def">MDPI.geotech.spatiotemporal</a><br />
 2020-12-31 <a href="#9e2696f5c6">MDPI.drone.swarms</a><br />
-2020-12-31 <a href="#e9418fead9">(J)MDPI.WirelessSensors.ITS</a><br />
 2020-12-31 <a href="#5029502302">(J)mdpi.Sensing.and.IoT</a><br />
+2020-12-31 <a href="#e9418fead9">(J)MDPI.WirelessSensors.ITS</a><br />
 2020-12-31 <a href="#ba0e52d4f3">(J)MDPI.Drones.swarms</a><br />
 2021-01-01 <a href="#b0632a7f9f">(J)ComMag.Network4Covid</a><br />
 2021-01-05 <a href="#b225640eb5">IFIP.Networking(~J)</a><br />
@@ -43,80 +41,6 @@
 2021-01-31 <a href="#2df4e5c249">MDPI.sustain</a><br />
 2021-02-28 <a href="#9582ef3fcf">jour.mdpi.vehicularfleets</a><br />
 2021-03-15 <a href="#95596e2fac">KSEM.knowledge</a></p>
-<h2 id="ieee.cogmi-2020-10-04-top">IEEE.CogMI (2020-10-04) <span id="44c7738649"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>Because of COVID-19, we have decided to reschedule the conference on Dec 1-3 as a FULLY VIRTUAL event.</p>
-<p>The cognitive machine intelligence (CogMI) is creating unprecedented opportunities for impactful scientific innovations and societal transformations by significantly augmenting the human ability for problem solving and rapid decision making in terms of speed, precision, and variety, while fostering innovations in all our human endeavors from scientific discoveries, solving long-standing healthcare problems, modeling highly interconnected and globally distributed systems, and so forth. As we enter the new social, physical and cyber world empowered by such cognitive machine intelligence, it is important to understand and explore the foundational characteristics of the algorithmic theory and processes behind the cognitive machine intelligence, the behavioral and cognitive enhancement of intelligent machines that promote a productive and creative partnership and collaboration between the humans and the machines so as to ensure an equitable, fair and transparent CogMI-enhanced society and cyber-physical-social worlds around us.</p>
-<p>The goal of the IEEE Conference on Cognitive Machine Intelligence (IEEE CogMI) is to create a research and development forum on cognitive machine intelligence to foster research results on AI and ML with cognitive science and behavioral science. It promotes productive collaborations among experts from multiple disciplines, such as but not limited to computer science, electronic and computer engineering, information science, economics, industrial engineering, psychology, social and behavioral sciences, biological and physical sciences, and ethics, law, and policy. IEEE CogMI 2020 aims to be a premier, highly multidisciplinary forum to foster interaction and exchange of innovative ideas, and collaboration among researchers, practitioners, philosophers from academia, industry and government sectors who are interested in developing innovative AI/ML algorithms, applications and systems by integrating cognitive science and putting humans in the loop, promoting innovations in cognitive machine intelligence.</p>
-<p>Topics</p>
-<p>Topics of interest are broadly from the areas of machine intelligence, behavior and cognition. Please check the conference website for details.</p>
-<p>Tracks</p>
-<p>CogMI2020 will have the research track, industry/government track, and blue-sky/vision track. Please check the website for submission details.</p>
-<p>Panels and Tutorials</p>
-<p>We welcome panel, and tutorial proposals. Please check the web site for details.</p>
-<p>Awards</p>
-<p>IEEE CogMI will feature a Best Paper Award and a Best Student Paper Award (to be selected by the program committee/best paper award team). A paper is eligible for the Best Student Paper Award if the first author is a full-time student at the time of submission. A partial travel grant or cash award may be offered to the winner student depending on fund availability.</p>
-<p>Submission Instructions</p>
-<p>Regular or Industry/Gov track papers should be no longer than 10 pages, while Vision paper can be as short as 2 pages but no longer than 10 pages. All papers should be in the standard two-column IEEE proceedings format.</p>
-<p>Submission Site: EasyChair for IEEE CogMI 2020</p>
-<p><span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="bigdataj.softcompute-2020-10-05-top">BigDataJ.softcompute (2020-10-05) <span id="7322197f11"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>deadlines.201005.BigDataJ.softcompute.txt<br />
-Big Data Special Issue</p>
-<p>Call for Papers:</p>
-<p>Special Issue on Soft Computing Models for Big Data and Internet of Things (IoT)</p>
-<p>Deadline for Submission: October 5, 2020</p>
-<p>Special Issue Publication date: Early 2021</p>
-<p>With the ubiquitous internet connectivity and bandwidth in abundance along with reduced cost of wearables and smart devices, the impact of the Internet of Things (IoT) and technology in our lives is manifold and profound.</p>
-<p>IoT devices are becoming a part of the mainstream electronics culture. Recently there have been many IoT applications such as smart homes, smart cities, smart industry, smart agriculture, smart healthcare which play a significant role in our lives. As the IoT solutions define the new paradigm for customer-oriented digital experience, they are inevitably getting more complex and dynamic.</p>
-<p>Undoubtedly, the recent advancements in intelligent sensing, embedded internet, edge computing and predictive data mining permeate intelligence and decision making into the physical world which continually enhance human experience in real-time. It is essential to understand that the success of IoT relies on the effective incorporation of big data analytics. “Big Data” is the new buzzword and big data analytics provides real-time insights, which need to be actioned upon quickly to support decision, gain better value and mitigate risk. Thanks to the emerging soft computing techniques which are widely used for coping with imprecision, uncertainty, partial truth, and approximation. Correlation analyses for spatial and temporal data and construction and clustering techniques, complex neural networks are some advances which are investigated and applied by academic researchers and industry within the domain of socio-technical systems.</p>
-<p>The primary scope of this special issue is to deliberate the progress and challenges of using innovative, novel, secure and smart soft computing solutions to define models as well as methods that explore aspects of dynamics in complex socio-technical systems. We invite recent works pertaining to the design and application of soft computing models to solve complex real-world problems associated to the big data and IoT. This special issue is intended to report high-quality and original research on wide range of applications from data analytics, pattern recognition, software and system modeling, to intelligent control problems and biomedical applications.</p>
-<p>The list of topics for the special issue includes but not limited to the following:</p>
-<p>Soft computing for IoT protocol design and optimization<br />
-Self-Learning and adaptive networking protocols and algorithms<br />
-Machine learning and soft computing-aided IoT<br />
-Intelligent middleware solutions IoT<br />
-Brain–computer interface and IoT<br />
-Security, privacy, integrity, and trust in IoT<br />
-Search and optimization of big data<br />
-Parallel, accelerated, and distributed big data<br />
-Data visualization of big data<br />
-Security and privacy of big data<br />
-Soft computing for big data<br />
-Multimedia big-data-driven IoT<br />
-Application of Big data Analytics<br />
-Novel algorithms, models, frameworks, platforms in big-data-driven IoT for smart solutions<br />
-Soft computing for Medical and Industrial IoT</p>
-<p>Please direct special issue inquiries to Corresponding Guest Editor, Dr. Akshi Kumar</p>
-<p>Please submit your papers online to our web-based manuscript submission and peer-review at: www.liebertpub.com/manuscript/big</p>
-<p>Big Data is a highly innovative, peer-reviewed journal, provides a unique forum for world-class research exploring the challenges and opportunities in collecting, analyzing, and disseminating vast amounts of data, including data science, big data infrastructure and analytics, and pervasive computing.</p>
-<p>Deadline for manuscript submission: October 5, 2020</p>
-<p>Advantages of publishing in Big Data include:</p>
-<p>l Fast and user-friendly electronic submission</p>
-<p>l Rapid, high-quality peer review</p>
-<p>l Maximum exposure: accessible in 170 countries worldwide</p>
-<p>l Open Access options available</p>
-<p>Guest Editors:</p>
-<p>Dr. Naveen Chilamkurti</p>
-<p>Department of Computer Science and Computer Engineering,</p>
-<p>La Trobe University<br />
-Melbourne, VIC, Australia</p>
-<p>Dr. Anand Paul</p>
-<p>The School of Computer Science and Engineering,</p>
-<p>Kyungpook National University<br />
-Daegu, South Korea</p>
-<p>Dr. Akshi Kumar (Corresponding Guest Editor)</p>
-<p>Department of Computer Science and Engineering</p>
-<p>Delhi Technological University<br />
-New Delhi, India</p>
-<p>Email:</p>
-<p>Warm wishes,</p>
-<p>Naveen</p>
-<p>Dr. Naveen Chilamkurti SMIEEE</p>
-<p>Associate Professor and Head of Cybersecurity Discipline</p>
-<p>Computer Science and IT</p>
-<p>La Trobe University, Melbourne, Australia</p>
-<p>Google Scholar website <a href="https://scholar.google.com.au/citations?user=KWi1vtkAAAAJ&amp;hl=en">https://scholar.google.com.au/citations?user=KWi1vtkAAAAJ&amp;hl=en</a><br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="eai-2020-10-05-top">EAI (2020-10-05) <span id="aedf9af28a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>EAI SmartCity360° International Convention 2020<br />
 6th EAI International Convention on Science and Technologies for Smart Cities<br />
@@ -1006,7 +930,7 @@ published paper. For more information, please visit tsas.acm.org/authors.cfm.</p
 <p>For questions and additional information, contact the special issue<br />
 guest-editors at tsas.ct@gmail.com.</p>
 <p><span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="âeai.covid19.and.cloudj-2020-10-30-top">âEAI.Covid19.and.cloud(+J) (2020-10-30) <span id="a996c6e76f"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="eai.covid19.and.cloudj-2020-10-30-top">★EAI.Covid19.and.cloud(+J) (2020-10-30) <span id="197c84667a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>Call for Papers</p>
 <p>Special issue on: “Covid-19 and the Cloud”</p>
 <p>Manuscript submission deadline: October 30, 2020</p>
