--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -88,13 +88,13 @@
 2020-10-08 <a href="#72ef55640f"><strike>東洋大学・情報社会の総合政策</strike></a><br />
 2020-10-09 <a href="#bc2e00886c"><strike>立命館大学.システム制御工学.無線通信・電波</strike></a><br />
 2020-10-12 <a href="#1e1dc54b48"><strike>東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど</strike></a><br />
-2020-10-16 <a href="#02c4b28b38">千葉経済大学・情報学分野</a><br />
+2020-10-16 <a href="#69f2a4545a">石川県工業試験場・電気職</a><br />
 2020-10-16 <a href="#0ece770448">東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究</a><br />
 2020-10-16 <a href="#84b6c0901c">大阪大学大学院・情報科学研究科</a><br />
-2020-10-16 <a href="#69f2a4545a">石川県工業試験場・電気職</a><br />
 2020-10-16 <a href="#1d2e883457"><strike>愛知工科大学・組込み系システム</strike></a><br />
-2020-10-16 <a href="#a4664346da">愛知工科大学・データサイエンスまたはＡＩ</a><br />
 2020-10-16 <a href="#9690b3ed53"><strike>FIT.制御・計測に関連する分野</strike></a><br />
+2020-10-16 <a href="#dc298a7ee7">▲千葉経済大学・情報学分野</a><br />
+2020-10-16 <a href="#659de97e18">▲愛知工科大学・データサイエンスまたはＡＩ</a><br />
 2020-10-19 <a href="#f111cc60ef">玉川大学・ソフトウェアサイエンス学科</a><br />
 2020-10-23 <a href="#bc36a4fbc6">東京工業大学・情報通信における応用AI分野</a><br />
 2020-10-29 <a href="#95ddb3ead5">成城大学・経営統計学</a><br />
@@ -221,8 +221,7 @@ url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D12007080
 <h2 id="東洋大学情報社会の総合政策-2020-10-08-top"><strike>東洋大学・情報社会の総合政策</strike> (2020-10-08) <span id="72ef55640f"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="立命館大学.システム制御工学.無線通信電波-2020-10-09-top"><strike>立命館大学.システム制御工学.無線通信・電波</strike> (2020-10-09) <span id="bc2e00886c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど-2020-10-12-top"><strike>東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど</strike> (2020-10-12) <span id="1e1dc54b48"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="fit.制御計測に関連する分野-2020-10-16-top"><strike>FIT.制御・計測に関連する分野</strike> (2020-10-16) <span id="9690b3ed53"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="愛知工科大学データサイエンスまたはａｉ-2020-10-16-top">愛知工科大学・データサイエンスまたはＡＩ (2020-10-16) <span id="a4664346da"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="愛知工科大学データサイエンスまたはａｉ-2020-10-16-top">▲愛知工科大学・データサイエンスまたはＡＩ (2020-10-16) <span id="659de97e18"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 22<br />
 id : D120081431 [NEW]<br />
 update : 2020年09月01日<br />
@@ -234,6 +233,19 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年10月16日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120081431&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120081431&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="千葉経済大学情報学分野-2020-10-16-top">▲千葉経済大学・情報学分野 (2020-10-16) <span id="dc298a7ee7"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<p>no : 15<br />
+id : D120090442 [NEW]<br />
+update : 2020年09月09日<br />
+univ : 千葉経済大学・情報学分野<br />
+title : 専任教員の公募（情報学分野）<br />
+field : 情報学 - 全て<br />
+post : 教授相当 准教授・常勤専任講師相当<br />
+tenure : 常勤 (任期なし)<br />
+deadline : 2020年10月16日<br />
+url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090442&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090442&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
+<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="fit.制御計測に関連する分野-2020-10-16-top"><strike>FIT.制御・計測に関連する分野</strike> (2020-10-16) <span id="9690b3ed53"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="愛知工科大学組込み系システム-2020-10-16-top"><strike>愛知工科大学・組込み系システム</strike> (2020-10-16) <span id="1d2e883457"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="石川県工業試験場電気職-2020-10-16-top">石川県工業試験場・電気職 (2020-10-16) <span id="69f2a4545a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 8<br />
@@ -246,18 +258,6 @@ post : 研究開発・技術者相当 研究員・ポスドク相当<br />
 tenure : 常勤 (任期なし)<br />
 deadline : 2020年10月16日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090768&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090768&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="千葉経済大学情報学分野-2020-10-16-top">千葉経済大学・情報学分野 (2020-10-16) <span id="02c4b28b38"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 15<br />
-id : D120090442 [NEW]<br />
-update : 2020年09月09日<br />
-univ : 千葉経済大学・情報学分野<br />
-title : 専任教員の公募（情報学分野）<br />
-field : 情報学 - 全て<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月16日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090442&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090442&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="大阪大学大学院情報科学研究科-2020-10-16-top">大阪大学大学院・情報科学研究科 (2020-10-16) <span id="84b6c0901c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 37<br />
