--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -89,7 +89,7 @@
 2020-10-09 <a href="#bc2e00886c"><strike>立命館大学.システム制御工学.無線通信・電波</strike></a><br />
 2020-10-12 <a href="#1e1dc54b48"><strike>東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど</strike></a><br />
 2020-10-16 <a href="#69f2a4545a">石川県工業試験場・電気職</a><br />
-2020-10-16 <a href="#0ece770448">東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究</a><br />
+2020-10-16 <a href="#d47fbc1ef1"><strike>東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究</strike></a><br />
 2020-10-16 <a href="#84b6c0901c">大阪大学大学院・情報科学研究科</a><br />
 2020-10-16 <a href="#1d2e883457"><strike>愛知工科大学・組込み系システム</strike></a><br />
 2020-10-16 <a href="#9690b3ed53"><strike>FIT.制御・計測に関連する分野</strike></a><br />
@@ -271,18 +271,7 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年10月16日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090588&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120090588&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究-2020-10-16-top">東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究 (2020-10-16) <span id="0ece770448"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 1<br />
-id : D120070326 [NEW]<br />
-update : 2020年07月20日<br />
-univ : 東京都立大学<br />
-title : 東京都立大学の専任教員公募（システムデザイン学部 情報科学科 准教授）人とのインタラクションや感覚を対象とした情報科学的研究分野<br />
-field : 情報学 - 人間情報学 情報学 - 情報学フロンティア<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年10月16日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070326&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070326&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究-2020-10-16-top"><strike>東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究</strike> (2020-10-16) <span id="d47fbc1ef1"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="玉川大学ソフトウェアサイエンス学科-2020-10-19-top">玉川大学・ソフトウェアサイエンス学科 (2020-10-19) <span id="f111cc60ef"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 9<br />
 id : D120090977 [NEW]<br />
